--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="header-text" data-animation="fade-in">
-                    <h1 class="title">Research Institute <span class="text-gradient">Knowledge Hub</span></h1>
+                    <h1 class="title">Research Institute <span class="text-gradient">Knowledge Hub By <br> Adil And Abdullah</span></h1>
                     <p class="intro-text">Welcome to our comprehensive repository of cutting-edge research across multiple disciplines. This knowledge hub serves as a central gateway to <b>innovative discoveries</b>, <i>groundbreaking methodologies</i>, and <u>collaborative opportunities</u> within the global research community.</p>
                     <p>We aim to facilitate <mark>knowledge transfer</mark> and interdisciplinary collaboration while supporting the development of <b>emerging research areas</b> and <s>phasing out outdated paradigms</s>.</p>
                     <p>Our institute has contributed to over 500 publications with an h-index of 78<sup>*</sup>.</p>
