--- a/404.html
+++ b/404.html
@@ -57,9 +57,9 @@
 </head>
 <body>
 
-  <div class="logo">Jamia Zahidia</div>
-  <h1>404 - Page Not Found</h1>
-  <p>SubhanAllah! The page you're looking for has gone missing.</p>
+  <div class="logo">Jamia Zahidia Israr Ul Uloom</div>
+  <h1>404 <br>Page Not Found</h1>
+  <p>Oops! The page you're looking for has gone missing.</p>
   <a href="/">🏠 Back to Home</a>
   <div class="quote">“Seek knowledge from the cradle to the grave.”</div>
 
