--- a/404.html
+++ b/404.html
@@ -17,11 +17,19 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       text-align: center;
-      height: 100vh;
+      min-height: 100vh;
       padding: 20px;
+    }
+
+    .mosque-img {
+      width: 100%;
+      max-width: 500px;
+      border-radius: 15px;
+      margin-bottom: 25px;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
     }
 
     .logo {
@@ -82,10 +90,14 @@
   </style>
 </head>
 <body>
+
+  <img src="mosque.jpeg" alt="Mosque" class="mosque-img" />
+  
   <div class="logo">Jamia Zahidia Israr Ul Uloom</div>
   <h1>404</h1>
   <p>Oops! Page you're looking for is not available.</p>
   <a href="/">🏠 Go to Home</a>
   <div class="quote">“Seek knowledge from the cradle to the grave.”</div>
+
 </body>
 </html>
