--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 
-  <img src="mosque.jpeg" alt="Mosque" class="mosque-img" />
+  <img src="mosque.jpg" alt="Mosque" class="mosque-img" />
   
   <div class="logo">Jamia Zahidia Israr Ul Uloom</div>
   <h1>404</h1>
