--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jamia Zahidia Israr Ul Uloom</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="SiteLogo.png" type="image/jpeg">
+    <link rel="icon" href="SiteLogo.png" type="image/png">
 
 </head>
 <body>
