--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
 
 
   <!-- SIXTH DAY OF COURSE -->
+
   <div class="main">
     <h2 class="course-title">📘 ضیائے شریعت کورس - دن ششم</h2>
     <div class="course-info">
@@ -452,25 +453,21 @@
       </p><br><br>
     </div>
 
-    <img class="thumbnail" src="mosque.jpg" alt="چھٹا لیکچر" />
-
-
+     <img class="thumbnail" src="fifth.jpg" alt="پانچواں لیکچر" />
     <button class="btn"
-      onclick="openFullscreen('fullscreenVideo6', 'https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/100078799332545/videos/1515026726128492&autoplay=1')">لیکچر
-      دیکھیں</button>
-
-
-    <div id="fullscreenVideo6" class="fullscreen-video">
-      <div class="video-box">
-        <button class="close-btn" onclick="closeFullscreen('fullscreenVideo5')">×</button>
-        <iframe id="videoFrame5" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div>
-    </div>
-
+  onclick="openFullscreen('fullscreenVideo6', 'https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/100078799332545/videos/1515026726128492&autoplay=1')">
+  لیکچر دیکھیں
+</button>
 
   </div>
 
-
+  <div id="fullscreenVideo6" class="fullscreen-video">
+    <div class="video-box">
+      <button class="close-btn" onclick="closeFullscreen('fullscreenVideo6')">×</button>
+      <iframe id="videoFrame5" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
+  
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
 <footer style="background-color: #1b5e20; color: white; padding: 30px 20px; font-size: 15px; margin-top: 40px; font-family: 'Segoe UI', sans-serif;">
