--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
       </p><br><br>
     </div>
 
-     <img class="thumbnail" src="fifth.jpg" alt="پانچواں لیکچر" />
+     <img class="thumbnail" src="mosque.jpg" alt="چھٹا لیکچر" />
     <button class="btn"
   onclick="openFullscreen('fullscreenVideo6', 'https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/100078799332545/videos/1515026726128492&autoplay=1')">
   لیکچر دیکھیں
@@ -464,7 +464,7 @@
   <div id="fullscreenVideo6" class="fullscreen-video">
     <div class="video-box">
       <button class="close-btn" onclick="closeFullscreen('fullscreenVideo6')">×</button>
-      <iframe id="videoFrame5" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe id="videoFrame6" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
   
@@ -503,7 +503,7 @@
    حافظ محمد شفیق چشتی (فاضل بھیرہ شریف) 
 </p>
     <p style="text-align: center; font-size: 13px;">
-      Jamia Zahidia Asrar-ul-Uloom
+      Jamia Zahidia Israr-ul-Uloom
     </p>
 
     <p style="text-align: center; font-size: 13px; direction: ltr;">
