--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>جامعہ زاہدیہ اسرار العلوم - ضیائے شریعت کورس</title>
+  <title>ضیائے شریعت کورس</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
+  <link rel="icon" href="SiteLogo.png" type="image/png">
+  
   <style>
     body {
       font-family: 'Noto Nastaliq Urdu', serif;
@@ -220,18 +222,6 @@
     height: 350px;
   }
 }
-
-
-
-
-
-
-
-
-
-
- 
-    /*  */
 
   </style>
 
