--- a/index.html
+++ b/index.html
@@ -523,10 +523,12 @@
   <p>
     اللہ تعالیٰ کے فضل سے مسجد انوارِ مدینہ کی عمارت کو وسیع کرنے کا کام جاری ہے تاکہ زیادہ سے زیادہ نمازیوں اور طلباء کے لیے جگہ فراہم کی جا سکے۔ اس مقصد کے تحت پرانی عمارت کو گرا کر جدید انداز میں دوبارہ تعمیر کیا جا رہا ہے۔ نیچے دی گئی تصاویر میں اس سفر کے اہم لمحات کو محفوظ کیا گیا ہے۔
   </p>
+  <div class="scroll-gallery">
 
   <img src="mosque_reconstruction1.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 1">
   <img src="mosque_reconstruction2.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 2">
-
+  <img src="mosque_reconstruction2.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 3">
+</div>
   <h2>👨‍🏫 ہمارے قاری صاحب</h2>
   <p>
     موجودہ امام و خطیب <strong>قاری محمد شفیق چشتی صاحب</strong> دامت برکاتهم، نہ صرف قرآن کریم کے ماہر قاری ہیں بلکہ طلباء کی دینی تربیت میں اہم کردار ادا کر رہے ہیں۔ ان کی محنت اور خلوص کی بدولت ادارہ روز بروز ترقی کی راہ پر گامزن ہے۔
@@ -539,7 +541,7 @@
     مدرسے میں مختلف عمر کے طلباء قرآن، تجوید، حدیث، فقہ، اور دیگر اسلامی علوم حاصل کر رہے ہیں۔ تربیتی ماحول، باادب اساتذہ، اور منظم نظامِ تعلیم ادارے کی پہچان ہے۔ ذیل میں طلباء کی کلاسز میں مصروفیت کی جھلکیاں دیکھی جا سکتی ہیں۔
   </p>
 
-  <<div class="scroll-gallery">
+  <div class="scroll-gallery">
   <img src="students1.jpg" alt="Image 1">
   <img src="students2.jpg" alt="Image 2">
   <img src="students3.jpg" alt="Image 3">
