--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jamia Zahidia | Home</title>
+  <title>Jamia Zahidia | Zia-e-Shariat Course</title>
   <meta name="description"
-    content="Jamia Zahidia Israr-Ul-Uloom offers the Islamic education for all ages. Learn Quran, Hadith, Fiqh, and more through our online and onsite programs.">
-  <meta name="keywords" content="Home jamia , jamia zahidia home, jamia home, zahidia home, israr ul uloom , jamia israr home , jamia zahidia israr home, Jamia Zahidia, Jamia Zahidia Israr ul Uloom, Gulshan e Khurshid School System, Islamic School Rawalpindi, Madarsa Rawalpindi, Quran Classes, Hadith Studies, Fiqh Course, Dars e Nizami, Islami taleem">
+    content="Jamia Zahidia Israr-Ul-Uloom offers the Zia-e-Shariat Course and Islamic education for all ages. Learn Quran, Hadith, Fiqh, and more through our online and onsite programs.">
+  <meta name="keywords" content="Zia e Shariat, Zia-e-Shariyat, Zia-e-Shariat Course, Jamia Zahidia, Jamia Zahidia Israr ul Uloom, Gulshan e Khurshid School System, Islamic School Rawalpindi, Madarsa Rawalpindi, Quran Classes, Hadith Studies, Fiqh Course, Dars e Nizami, Islami taleem">
   <link rel="icon" type="image/png" sizes="16x16" href="sixteen_into_sixteen.png">
   <link rel="icon" type="image/png" sizes="32x32" href="thirtytwo_into_thirtytwo.png">
   <link rel="icon" type="image/png" sizes="48x48" href="fourtyeight_into_fourtyeight.png">
@@ -420,6 +420,20 @@
   border-radius: 8px;
 }
 
+
+  .scrolling-gallery {
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
+  padding: 10px 0;
+  direction: ltr;
+}
+
+.scrolling-gallery img {
+  height: 420px;
+  flex: 0 0 auto;
+  border-radius: 8px;
+}
   </style>
 
 
@@ -521,20 +535,32 @@
 
   <h2>🕌 مسجد کی توسیع کا سفر</h2>
   <p>
-    اللہ تعالیٰ کے فضل سے مسجد انوارِ مدینہ کی عمارت کو وسیع کرنے کا کام جاری ہے تاکہ زیادہ سے زیادہ نمازیوں اور طلباء کے لیے جگہ فراہم کی جا سکے۔ اس مقصد کے تحت پرانی عمارت کو گرا کر جدید انداز میں دوبارہ تعمیر کیا جا رہا ہے۔ نیچے دی گئی تصاویر میں اس سفر کے اہم لمحات کو محفوظ کیا گیا ہے۔
+اللہ تعالیٰ کے فضل سے مسجد انوارِ مدینہ کی عمارت کو وسیع کرنے کا کام مکمل ہو چکا ہے، تاکہ زیادہ سے زیادہ نمازیوں اور طلباء کے لیے جگہ فراہم کی جا سکے۔ اس مقصد کے تحت پرانی عمارت کو گرا کر جدید انداز میں دوبارہ تعمیر کیا گیا ہے۔ نیچے دی گئی تصاویر میں اس سفر کے اہم لمحات کو محفوظ کیا گیا ہے۔  
   </p>
   <div class="scroll-gallery">
 
   <img src="mosque_reconstruction1.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 1">
   <img src="mosque_reconstruction2.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 2">
-  <img src="mosque_reconstruction2.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 3">
+  <img src="mosque_reconstruction3.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 3">
+  <img src="mosque_reconstruction4.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 3">
+  <img src="mosque_reconstruction5.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 3">
+  <img src="mosque_reconstruction6.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 3">
+  <img src="mosque_reconstruction7.jpg" class="thumbnail" alt="مسجد تعمیراتی مرحلہ 3">
 </div>
-  <h2>👨‍🏫 ہمارے قاری صاحب</h2>
-  <p>
-    موجودہ امام و خطیب <strong>قاری محمد شفیق چشتی صاحب</strong> دامت برکاتهم، نہ صرف قرآن کریم کے ماہر قاری ہیں بلکہ طلباء کی دینی تربیت میں اہم کردار ادا کر رہے ہیں۔ ان کی محنت اور خلوص کی بدولت ادارہ روز بروز ترقی کی راہ پر گامزن ہے۔
-  </p>
+<h2>👨‍🏫 محی السنۃ، معلمِ ملت، امامِ العصر</h2>
+ <p>
+  فضلِ خدایِ لم یزل سے مسجدِ انوارِ مدینہ کی تعمیرِ نو و توسیع کا عظیم الشان منصوبہ بعونِ الٰہی پایۂ تکمیل کو پہنچ چکا ہے، تاکہ بندگانِ خدا کی عبادات اور طالبانِ علومِ دینیہ کی علمی پیاس کی تسکین کے لیے مزید وُسعت و فراخی مہیا کی جا سکے۔ اس مقصدِ جلیلہ کے پیشِ نظر قدیم عمارت کو منہدم کر کے جدید طرزِ تعمیر کی جھلک لیے ایک روح پرور مرکزِ عبادت و تعلیم از سرِ نو استوار کیا گیا۔ زیریں تصاویر میں اس بابرکت سفر کی چند نادر و نایاب جھلکیاں محفوظ کی گئی ہیں، جو گواہ ہیں عزمِ راسخ، اخلاصِ نیت اور للہیت کے حسین امتزاج کی۔
+</p>
+
+<p>
+  ان تصاویر میں محترم و مکرم، فاضلِ اجل، حضرتِ قاری محمد شفیق چشتی صاحب <em>دامت فیوضہم و برکاتہم</em> کی زیارت کا شرف بھی حاصل ہوتا ہے، جن کی خوش الحانی، فصاحتِ لسان، اور اخلاص پر مبنی تربیتی کاوشیں ادارہ کے لیے مایۂ ناز ہیں۔ ان کے پہلو میں ایک نہایت ہی متبرک، جلیل القدر اور بزرگ المرتبت شخصیت بھی جلوہ گر ہیں، جن کی حیاتِ طیبہ ادارے کی علمی و روحانی بنیادوں کی مستحکم علامت ہے۔
+</p>
+
+  <div class="scrolling-gallery">
 
   <img src="QariSahab.jpg" class="thumbnail" alt="قاری صاحب کی تصویر">
+  <img src="buzurg.jpg" class="thumbnail" alt="قاری صاحب کی تصویر">
+</div>
 
   <h2>🧑‍🎓 طلباء کی دینی سرگرمیاں</h2>
   <p>
