--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jamia Zahidia | Zia-e-Shariat Course</title>
+  <title>Jamia Zahidia | HOME </title>
   <meta name="description"
-    content="Jamia Zahidia Israr-Ul-Uloom offers the Zia-e-Shariat Course and Islamic education for all ages. Learn Quran, Hadith, Fiqh, and more through our online and onsite programs.">
+    content="Jamia Zahidia Israr-ul-Uloom is a trusted Islamic institute offering complete religious education in Quran, Hadith, Fiqh, and spiritual training for all ages, both online and onsite.">
   <meta name="keywords" content="Zia e Shariat, Zia-e-Shariyat, Zia-e-Shariat Course, Jamia Zahidia, Jamia Zahidia Israr ul Uloom, Gulshan e Khurshid School System, Islamic School Rawalpindi, Madarsa Rawalpindi, Quran Classes, Hadith Studies, Fiqh Course, Dars e Nizami, Islami taleem">
   <link rel="icon" type="image/png" sizes="16x16" href="sixteen_into_sixteen.png">
   <link rel="icon" type="image/png" sizes="32x32" href="thirtytwo_into_thirtytwo.png">
