--- a/zia-shariat.html
+++ b/zia-shariat.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="thirtytwo_into_thirtytwo.png" type="image/png">
     <meta name="theme-color" content="#116530">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
-
+    <link rel="canonical" href="https://www.jamiazahidia.online/zia-shariat.html">
 
     <style>
         body {
