--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="shortcut icon" href="thirtytwo_into_thirtytwo.png" type="image/png">
   <meta name="theme-color" content="#116530">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://www.jamiazahidia.online/">
 
 
   <style>
@@ -712,7 +713,7 @@
         حافظ محمد شفیق چشتی (فاضل بھیرہ شریف)
       </p>
       <p style="text-align: center; font-size: 13px;">
-        Jamia Zahidia Asrar-ul-Uloom
+        Jamia Zahidia Israr-Ul-Uloom
       </p>
 
       <p style="text-align: center; font-size: 13px; direction: ltr;">
