--- a/zia-shariat.html
+++ b/zia-shariat.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="thirtytwo_into_thirtytwo.png" type="image/png">
     <meta name="theme-color" content="#116530">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://www.jamiazahidia.online/zia-shariat.html">
+
 
     <style>
         body {
@@ -147,12 +147,30 @@
         }
 
         .intro h2 {
-            color: #d4630d;
-            font-size: 22px;
-            text-decoration: underline;
-            text-decoration-style: solid;
+            font-size: 13px;
+            /* 🔼 slightly larger for more impact */
+            font-weight: bold;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            margin-right: -14px;
+            line-height: 30px;
+            color: #004d00;
+            /* deeper green for elegance */
             text-align: right;
+            background: linear-gradient(to left, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.05));
+            backdrop-filter: blur(12px) brightness(1.1);
+            padding: 12px;
+            padding-left: 40px;
+            padding-right: 18px;
+            border-radius: 14px;
+            word-spacing: 3px;
+            box-shadow: 0 8px 40px rgba(0, 0, 0, 0.3);
+            /* ✨ deeper shadow */
+            display: inline-block;
+            letter-spacing: 1px;
+            /* adds subtle modern spacing */
         }
+
 
         .intro p {
             margin-bottom: 18px;
@@ -200,7 +218,8 @@
 
         .ticker-box {
             overflow: hidden;
-            width: 300px;
+            width: 100%;
+            /* full width of screen */
             /* narrower box */
             position: relative;
             direction: ltr;
@@ -405,6 +424,12 @@
             border-radius: 8px;
             box-shadow: 0 0 15px limegreen;
         }
+
+
+
+
+
+        /* here added */
     </style>
 
 
@@ -733,7 +758,7 @@
                 حافظ محمد شفیق چشتی (فاضل بھیرہ شریف)
             </p>
             <p style="text-align: center; font-size: 13px;">
-                Jamia Zahidia Asrar-ul-Uloom
+                Jamia Zahidia Israr-Ul-Uloom
             </p>
 
             <p style="text-align: center; font-size: 13px; direction: ltr;">
