--- a/index.html
+++ b/index.html
@@ -630,42 +630,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <form id="contactForm" onsubmit="sendToWhatsApp(); return false;"
     style="max-width: 330px; margin: 30px auto; padding: 25px 25px; background: #f4fff9; border-radius: 20px; box-shadow: 0 8px 25px rgba(0, 128, 0, 0.2); font-family: 'Noto Nastaliq Urdu', serif; direction: rtl; color: #064d24;">
 
@@ -751,7 +715,7 @@
         حافظ محمد شفیق چشتی (فاضل بھیرہ شریف)
       </p>
       <p style="text-align: center; font-size: 13px;">
-        Jamia Zahidia Asrar-ul-Uloom
+        Jamia Zahidia Israr-Ul-Uloom
       </p>
 
       <p style="text-align: center; font-size: 13px; direction: ltr;">
