--- a/zia-shariat.html
+++ b/zia-shariat.html
@@ -184,7 +184,7 @@
 
         .bg-half {
             background: url('Imam_Malik.jpg') center/cover no-repeat;
-            height: 39vh;
+            height: 35vh;
         }
 
         .ticker {
@@ -528,9 +528,9 @@
             از: حافظ محمد شفیق چشتی (فاضل بھیرہ شریف)
         </figcaption>
     </figure>
-
+<div class="intro">
       <p>🔔 نیچے دی گئی ویڈیوز سے آغاز کریں اور اس مبارک سفر میں شامل ہوں۔</p>
-
+</div>
     <!-- FIRST DAY OF COURSE -->
 
     <div class="main">
