--- a/index.html
+++ b/index.html
@@ -587,15 +587,13 @@
     <br><br>
     <h2>👨‍🏫 مسجد کے امام</h2>
     <p>
-
-      ان تصویروں میں قاری محمد شفیق چشتی صاحب اور ایک بزرگ شخصیت نظر آ رہے ہیں، جو ادارے سے وابستہ ہیں۔
+ان تصویروں میں قاری محمد شفیق چشتی صاحب نظر آ رہے ہیں، جن کی سرپرستی میں ادارہ ترقی کی راہ پر گامزن ہے۔
     </p>
 
     <br><br>
     <div class="scrolling-gallery">
 
       <img src="QariSahab.jpg" class="thumbnail" alt="قاری صاحب کی تصویر">
-      <img src="buzurg.jpg" class="thumbnail" alt="قاری صاحب کی تصویر">
     </div>
     <br><br><br>
     <h2>🧑‍🎓 طلباء کی دینی سرگرمیاں</h2>
