--- a/zia-shariat.html
+++ b/zia-shariat.html
@@ -679,11 +679,15 @@ let sidebarOpen = false;
 
 function animateTease() {
   if (!sidebarOpen && otherSidebar.style.right !== '0px') {
-    tease.style.left = '0px';
+    tease.style.left = '0px'; // show tease
+
+    // Show for long time (7 sec)
     setTimeout(() => {
-      tease.style.left = '-150px';
+      tease.style.left = '-150px'; // hide tease
+
+      // Hide for short time (1 sec), then show again
       setTimeout(animateTease, 1000);
-    }, 5000);
+    }, 7000);
   }
 }
 
