--- a/index.html
+++ b/index.html
@@ -594,6 +594,7 @@
     <div class="scrolling-gallery">
 
       <img src="QariSahab.jpg" class="thumbnail" alt="قاری صاحب کی تصویر">
+      <img src="Imam_Masjid.jpg" class="thumbnail" alt="قاری صاحب کی تصویر">
     </div>
     <br><br><br>
     <h2>🧑‍🎓 طلباء کی دینی سرگرمیاں</h2>
